# orinVideoEncDec

./: .gitignore  README.md
scripts/: bench_orin_cpu.sh  check_orin_cameras.sh
src/cr_h265_publisher/: CMakeLists.txt  package.xml
src/cr_h265_publisher/config/: params.yaml
src/cr_h265_publisher/include/cr_h265_publisher/: gst_h265_encoder.hpp
src/cr_h265_publisher/launch/: multi_cameras.launch.py
src/cr_h265_publisher/src/: cr_h265_dump_node.cpp  cr_h265_publisher_node.cpp  gst_h265_encoder.cpp
