<?xml version="1.0"?>
<package format="3">
  <name>cr_h265_publisher</name>
  <version>0.0.1</version>
  <description>Jetson (GStreamer NVENC) H.265 publisher for V4L2 cameras.</description>
  <maintainer email="phoenixjyb@users.noreply.github.com">phoenixjyb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
